--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -153,7 +153,7 @@ footer {
 .education-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content:space-between;
     gap: 20px;
 }
 
