--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -62,7 +62,7 @@ footer {
 .languages-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -93,7 +93,7 @@ footer {
 .skills-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -123,7 +123,7 @@ footer {
 .experience-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
 }
 
@@ -183,7 +183,7 @@ footer {
 .aficiones {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 20px;
 }
 
