--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -100,7 +100,7 @@ footer {
 .skill {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -207,4 +207,18 @@ footer {
 a:hover{
     text-decoration: none;
     font-weight: bold;
+}
+
+.navegador a{
+    text-decoration: none;
+    color: var(--main-color);
+    border: 1px solid #f4f4f4;
+    border-radius: 5px;
+    padding: 10px;    
+}
+
+.navegador{
+    text-align: center;
+    background-color: #242121;
+    border: 3px solid #f4f4f4;
 }
